-------------------------------------------------------------------
Thu Oct 25 20:53:53 CEST 2012 - anaselli@linux.it

- YQIMage autoScale implementation

-------------------------------------------------------------------
Fri Sep  7 13:52:12 CEST 2012 - tgoettlicher@suse.de

- Version 2.42.2

-------------------------------------------------------------------
Tue Sep  4 14:37:19 CEST 2012 - tgoettlicher@suse.de

- Fixed requirements in doc spec file

-------------------------------------------------------------------
Tue May 15 16:17:21 CEST 2012 - tgoettlicher@suse.de

- renamed package to libyui-qt
- Version: 2.22.6

-------------------------------------------------------------------
Fri May  4 10:22:36 CEST 2012 - tgoettlicher@suse.de

- Sort numeric table columns in numeric order
- Version: 2.22.6

-------------------------------------------------------------------
Tue Apr 10 15:40:58 CEST 2012 - tgoettlicher@suse.de

- BuildRequire libxcrypt-devel only for < 12.2 
- Version: 2.22.5

-------------------------------------------------------------------
Thu Feb 23 15:12:05 CET 2012 - tgoettlicher@suse.de

- Fixed selection Table widget (bnc#746156) 
- Version: 2.22.4

-------------------------------------------------------------------
Fri Feb 17 16:17:32 CET 2012 - tgoettlicher@suse.de

- Fixed selection and sorting in Table widget (bnc#746156) 
- Version: 2.22.3

-------------------------------------------------------------------
Wed Feb  8 14:54:15 CET 2012 - tgoettlicher@suse.de

- Fixed bnc#731540: fixed auto-scroll in LogView
- Version: 2.22.2

-------------------------------------------------------------------
Tue Dec 20 16:30:28 CET 2011 - tgoettlicher@suse.de

- Confirmed license
- V 2.22.1

-------------------------------------------------------------------
Thu Dec  1 17:46:33 CET 2011 - tgoettlicher@suse.de

- Follow links to anchors in YQTextBrowser (bnc #727330)
- V 2.22.0

-------------------------------------------------------------------