@@ -1,7 +1,7 @@
 SET(VERSION_MAJOR "2")
 SET(VERSION_MINOR "42")
 SET(VERSION_PATCH "2")
-SET( VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}" )
+SET( VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${GIT_SHA1_VERSION}" )
 
 ##### This is need for the libyui core, ONLY.
 ##### These will be overridden from exports in LibyuiConfig.cmake
